--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'jacoco'
     id 'io.franzbecker.gradle-lombok' version '1.14'
     id 'io.codearte.nexus-staging' version '0.11.0'
-    id 'com.gradle.build-scan' version '3.5'
+//    id 'com.gradle.build-scan' version '3.5'
 //    id "com.github.hierynomus.license" version "0.15.0"
 }
 
@@ -25,7 +25,7 @@ repositories {
     mavenCentral()
 }
 
-group 'ru.oleg-cherednik.ibatis-typehandler'
+group 'ru.oleg-cherednik.mybatis-typehandler'
 version '0.1'
 
 sourceCompatibility = '1.8'
@@ -37,13 +37,17 @@ tasks.withType(JavaCompile) {
 }
 
 configurations {
-    jar.archiveName = "ibatis-typehandler-${version}.jar"
+    jar.archiveName = "mybatis-typehandler-${version}.jar"
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation 'ch.qos.logback:logback-core:1.2.3'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'org.mybatis:mybatis:3.5.6'
+
+
+//    implementation 'org.slf4j:slf4j-api:1.7.25'
+//    implementation 'ch.qos.logback:logback-core:1.2.3'
+//    implementation 'ch.qos.logback:logback-classic:1.2.3'
+
 //    implementation 'commons-io:commons-io:2.6'
 //    implementation 'commons-lang:commons-lang:2.6'
     implementation 'org.apache.commons:commons-collections4:4.3'
@@ -70,10 +74,10 @@ test {
     useTestNG()
 }
 
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-}
+//buildScan {
+//    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+//    termsOfServiceAgree = 'yes'
+//}
 
 //license {
 //    header = file('license_header.txt')
@@ -83,15 +87,15 @@ buildScan {
 
 modifyPom {
     project {
-        name 'ibatis-typehandler'
+        name 'mybatis-typehandler'
         description 'Zip files support for JDK application'
-        url 'https://github.com/oleg-cherednik/ibatis-typehandler'
+        url 'https://github.com/oleg-cherednik/mybatis-typehandler'
         inceptionYear '2020'
 
         scm {
-            url 'https://github.com/oleg-cherednik/ibatis-typehandler'
-            connection 'scm:https://github.com:oleg-cherednik/ibatis-typehandler.git'
-            developerConnection 'scm:git@github.com:oleg-cherednik/ibatis-typehandler.git'
+            url 'https://github.com/oleg-cherednik/mybatis-typehandler'
+            connection 'scm:https://github.com:oleg-cherednik/mybatis-typehandler.git'
+            developerConnection 'scm:git@github.com:oleg-cherednik/mybatis-typehandler.git'
         }
 
         licenses {
