--- a/build.gradle
+++ b/build.gradle
@@ -41,12 +41,10 @@ configurations {
 }
 
 dependencies {
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'ch.qos.logback:logback-core:1.2.3'
+    implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'org.mybatis:mybatis:3.5.6'
-
-
-//    implementation 'org.slf4j:slf4j-api:1.7.25'
-//    implementation 'ch.qos.logback:logback-core:1.2.3'
-//    implementation 'ch.qos.logback:logback-classic:1.2.3'
 
 //    implementation 'commons-io:commons-io:2.6'
 //    implementation 'commons-lang:commons-lang:2.6'
